--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -9,13 +9,14 @@
     "watch": "export NODE_ENV=local && ts-node-dev --respawn src/index.ts"
   },
   "devDependencies": {
-    "aws-sdk": "^2.788.0",
     "@types/aws-serverless-express": "^3.3.3",
     "@types/express": "^4.17.8",
+    "aws-sdk": "^2.788.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@guardian/pan-domain-node": "^0.4.2",
     "aws-serverless-express": "^3.3.8",
     "express": "^4.17.1"
   }
