--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,6 +13,8 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.73.0",
+    "@aws-cdk/aws-iam": "^1.73.0",
     "@aws-cdk/aws-lambda": "^1.73.0",
     "@aws-cdk/aws-s3": "^1.73.0",
     "@aws-cdk/core": "^1.73.0"
