--- a/cdk/package.json
+++ b/cdk/package.json
@@ -8,12 +8,15 @@
     "synth": "cdk synth --app 'npx ts-node cdk.ts' > cloudformation.yaml"
   },
   "devDependencies": {
+    "@types/node": "^14.14.7",
     "aws-cdk": "^1.73.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.73.0",
+    "@aws-cdk/aws-appsync": "^1.73.0",
+    "@aws-cdk/aws-dynamodb": "^1.73.0",
     "@aws-cdk/aws-iam": "^1.73.0",
     "@aws-cdk/aws-lambda": "^1.73.0",
     "@aws-cdk/aws-s3": "^1.73.0",
