made 'cdk' sub-project one of the 'workspaces' of the main package.json (following https://github.com/guardian/editorial-tools-pinboard/pull/3)
Co-authored-by: jennygrahamjones <jennygrahamjones@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "private": true,
+  "workspaces": ["cdk"],
   "devDependencies": {
     "typescript": "^4.0.5"
   }
