--- a/cdk/package.json
+++ b/cdk/package.json
@@ -10,8 +10,7 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "aws-cdk": "^1.73.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "ts-node": "^9.0.0"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.73.0",
