have 'bootstrapping-lambda' sub-project be one of the 'workspaces' of the main package.json and its tsconfig extend the top-level tsconfig.json
Co-authored-by: jennygrahamjones <jennygrahamjones@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "private": true,
   "workspaces": [
+    "bootstrapping-lambda",
     "cdk"
   ],
   "devDependencies": {
