--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -12,8 +12,7 @@
     "@types/aws-serverless-express": "^3.3.3",
     "@types/express": "^4.17.8",
     "aws-sdk": "^2.788.0",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.0.5"
+    "ts-node-dev": "^1.0.0"
   },
   "dependencies": {
     "@guardian/pan-domain-node": "^0.4.2",
