Add parameters to riff-raff.yaml - Explicitly define stack name - Don't prepend stack with 'flexible'

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -8,4 +8,7 @@ deployments:
     type: cloud-formation
     app: pinboard
     parameters:
+      cloudFormationStackByTags: false
+      prependStackToCloudFormationStackName: false
+      cloudFormationStackName: pinboard
       templatePath: cloudformation.yaml
