add riff-raff step for uploading pinboard-bootstrapping-lambda.zip
Co-authored-by: jennygrahamjones <jennygrahamjones@users.noreply.github.com>

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -12,3 +12,12 @@ deployments:
       prependStackToCloudFormationStackName: false
       cloudFormationStackName: pinboard
       templatePath: cloudformation.yaml
+
+  pinboard-bootstrapping-api-lambda:
+    type: aws-lambda
+    parameters:
+      prefixStack: false
+      bucket: composer-dist
+      fileName: pinboard-bootstrapping-api-lambda.zip
+      functionNames:
+        [pinboard-bootstrapping-lambda-]
