create new sub-project/directory client and copied in client-side prototype code as a placeholder (with a few renames)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "workspaces": [
     "bootstrapping-lambda",
-    "cdk"
+    "cdk",
+    "client"
   ],
   "devDependencies": {
     "@guardian/node-riffraff-artifact": "^0.1.9",
