--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,17 @@
   "name": "@guardian/pinboard-client",
   "version": "1.0.0",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
+  "scripts": {
+    "watch": "tsc --noEmit --watch & parcel parcel-entry.html --global PinBoard",
+    "build": "tsc --noEmit & parcel build parcel-entry.html --global PinBoard"
+  },
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9"
+    "@types/react-dom": "^16.9.9",
+    "parcel-bundler": "^1.12.4"
   }
 }
