--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "build": "tsc --noEmit & parcel build parcel-entry.html --global PinBoard"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.7",
+    "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
