--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client"
   ],
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.2",
     "@guardian/node-riffraff-artifact": "^0.1.9",
     "typescript": "^4.0.5"
   }
