--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.7",
+    "apollo-link": "^1.2.14",
+    "aws-appsync-auth-link": "^3.0.2",
+    "aws-appsync-subscription-link": "^3.0.3",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
