--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ dist/
 # (but if generated locally we don't want it in version control as will get out of date)
 cloudformation.yaml
 cdk.out/
+
+shared/graphql/graphql.ts
