--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
     "@graphql-codegen/typescript": "1.17.11",
     "@graphql-codegen/typescript-resolvers": "1.17.11",
     "@guardian/node-riffraff-artifact": "^0.1.9",
+    "husky": ">=4",
+    "lint-staged": ">=10",
     "prettier": "2.2.1",
     "typescript": "^4.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
