Add basic implementation of workflow-bridge-lambda
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "workspaces": [
     "bootstrapping-lambda",
     "cdk",
-    "client"
+    "client",
+    "workflow-bridge-lambda"
   ],
   "scripts": {
     "graphql-refresh": "graphql-codegen --config graphql-refresh.yml",
