--- a/workflow-bridge-lambda/package.json
+++ b/workflow-bridge-lambda/package.json
@@ -7,6 +7,8 @@
     "build": "ncc build src/index.ts -o dist -m -e aws-sdk"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.25.1"
+    "@types/node-fetch": "^2.5.7",
+    "@vercel/ncc": "^0.25.1",
+    "node-fetch": "^2.6.1"
   }
 }
