Use imports to set VPC for bridging lambda
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>

--- a/workflow-bridge-lambda/package.json
+++ b/workflow-bridge-lambda/package.json
@@ -10,5 +10,8 @@
     "@types/node-fetch": "^2.5.7",
     "@vercel/ncc": "^0.25.1",
     "node-fetch": "^2.6.1"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.78.0"
   }
 }
