--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "aws-appsync-subscription-link": "^3.0.3",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-modal": "^3.10.6",
     "parcel-bundler": "^1.12.4"
   }
 }
