--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "aws-appsync-subscription-link": "^3.0.3",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-fuzzy": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
