pre-commit hook and lint check

--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     }
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": ["eslint --fix", "prettier --write --ignore-unknown"]
   }
 }
