--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "jsx": "react",
-    "outDir": "tsc-dist"
+    "outDir": "tsc-dist",
+    "types": ["@emotion/react/types/css-prop"]
   }
 }
