--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "@apollo/client": "^3.2.7",
     "@emotion/react": "^11.1.4",
-    "@svgr/parcel-plugin-svgr": "^5.5.0",
     "apollo-link": "^1.2.14",
     "aws-appsync-auth-link": "^3.0.2",
     "aws-appsync-subscription-link": "^3.0.3",
@@ -20,6 +19,7 @@
   "devDependencies": {
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "@svgr/parcel-plugin-svgr": "^5.5.0"
   }
 }
