--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
-    "watch": "tsc --noEmit --watch & parcel parcel-entry.html --global PinBoard",
-    "build": "tsc --noEmit & parcel build parcel-entry.html --global PinBoard"
+    "watch": "tsc --noEmit --watch & parcel watch parcel-entry.html --global PinBoard",
+    "devBuild": "tsc --noEmit && NODE_ENV=development parcel build parcel-entry.html --global PinBoard --no-minify",
+    "build": "tsc --noEmit && parcel build parcel-entry.html --global PinBoard"
   },
   "dependencies": {
     "@apollo/client": "^3.2.7",
