--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     }
   },
   "lint-staged": {
-    "**/*": ["eslint --fix", "prettier --write --ignore-unknown"]
+    "**/*.{ts, tsx}": "eslint --fix",
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
