--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
-    "watch": "tsc --noEmit --watch & parcel watch parcel-entry.html --global PinBoard",
-    "devBuild": "tsc --noEmit && NODE_ENV=development parcel build parcel-entry.html --global PinBoard --no-minify",
+    "watch": "tsc --noEmit --watch & parcel watch parcel-entry.html --global PinBoard | grep -v 'Could not load source file'",
+    "devBuild": "tsc --noEmit && NODE_ENV=development parcel build parcel-entry.html --global PinBoard --no-minify | grep -v 'Could not load source file'",
     "build": "tsc --noEmit && parcel build parcel-entry.html --global PinBoard"
   },
   "dependencies": {
