--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "scripts": {
     "graphql-refresh": "graphql-codegen --config graphql-refresh.yml",
-    "prettier": "prettier --write .",
+    "prettier-write": "prettier --write .",
+    "prettier-check": "prettier --check .",
     "lint": "eslint ./**/src/*.ts ./**/src/*.tsx ./cdk/stack.ts",
     "watch-client": "yarn --cwd 'client' watch | sed -e 's/^/[CLIENT] /' ",
     "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch | sed -e 's/^/[BOOTSTRAPPING-LAMBDA] /'",
