--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "prettier-write": "prettier --write .",
     "prettier-check": "prettier --check .",
     "lint": "eslint ./**/src/*.ts ./**/src/*.tsx ./cdk/stack.ts",
-    "watch-client": "yarn --cwd 'client' watch | sed -e 's/^/[CLIENT] /' ",
-    "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch | sed -e 's/^/[BOOTSTRAPPING-LAMBDA] /'",
+    "watch-client": "yarn --cwd 'client' watch 2>&1 | sed -e 's/^/[CLIENT] /' ",
+    "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch 2>&1 | sed -e 's/^/[BOOTSTRAPPING-LAMBDA] /'",
     "watch": "run-p watch-client watch-bootstrapping-lambda"
   },
   "devDependencies": {
