--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@apollo/client": "^3.2.7",
     "@emotion/react": "^11.1.4",
     "@guardian/src-foundations": "^3.3.0",
+    "@webscopeio/react-textarea-autocomplete": "^4.7.3",
     "apollo-link": "^1.2.14",
     "aws-appsync-auth-link": "^3.0.2",
     "aws-appsync-subscription-link": "^3.0.3",
@@ -21,6 +22,7 @@
     "@svgr/parcel-plugin-svgr": "^5.5.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/webscopeio__react-textarea-autocomplete": "^4.6.3",
     "parcel-bundler": "^1.12.4"
   }
 }
