users-refresh-lambda

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -20,6 +20,8 @@
     "@aws-cdk/aws-lambda": "^1.95.1",
     "@aws-cdk/aws-s3": "^1.95.1",
     "@aws-cdk/aws-ec2": "^1.95.1",
+    "@aws-cdk/aws-events": "^1.95.1",
+    "@aws-cdk/aws-events-targets": "^1.95.1",
     "@aws-cdk/core": "^1.95.1"
   }
 }
