--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "@svgr/parcel-plugin-svgr": "^5.5.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
-    "@types/webscopeio__react-textarea-autocomplete": "https://gitpkg.now.sh/tjsilver/DefinitelyTyped/types/webscopeio__react-textarea-autocomplete?patch-1",
+    "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
     "parcel-bundler": "^1.12.4"
   }
 }
