--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "apollo-link": "^1.2.14",
     "aws-appsync-auth-link": "^3.0.2",
     "aws-appsync-subscription-link": "^3.0.3",
+    "date-fns": "^2.19.0",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
