--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0"
   }
 }
