--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,14 @@
   },
   "devDependencies": {
     "@svgr/parcel-plugin-svgr": "^5.5.0",
+    "@types/jest": "^26.0.22",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
+    "jest": "^26.6.3",
+    "jest-environment-node": "^26.6.2",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-bundle-visualiser": "^1.2.0"
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "ts-jest": "^26.5.4"
   }
 }
