--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "jsx": "react",
     "outDir": "tsc-dist",
-    "types": ["@emotion/react/types/css-prop"]
+    "types": ["@emotion/react/types/css-prop", "@types/jest"]
   }
 }
