--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "aws-appsync-subscription-link": "^3.0.3",
     "date-fns": "^2.19.0",
     "graphql": "^15.4.0",
-    "preact": "^10.5.13"
+    "preact": "^10.5.13",
+    "react-shadow": "^19.0.2"
   },
   "devDependencies": {
     "@svgr/parcel-plugin-svgr": "^5.5.0",
