--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
       [
         {
           "name": "@guardian/src-foundations/typography",
-          "message": "Please use the modified fonts from cssReset.ts"
+          "message": "Please use the modified fonts from fontNormaliser.ts"
         }
       ]
     ]
