Setup shell of notifications lambda
Co-Authored-By: Tom Richards <19289579+twrichards@users.noreply.github.com>

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -43,3 +43,13 @@ deployments:
       bucket: workflow-dist
       fileName: pinboard-users-refresher-lambda.zip
       functionNames: [pinboard-users-refresher-lambda-]
+
+  pinboard-notifications-lambda:
+    dependencies:
+      - pinboard-cloudformation
+    type: aws-lambda
+    parameters:
+      prefixStack: false
+      bucket: workflow-dist
+      fileName: pinboard-notifications-lambda.zip
+      functionNames: [pinboard-notifications-lambda-]
