--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cdk",
     "client",
     "workflow-bridge-lambda",
-    "users-refresher-lambda"
+    "users-refresher-lambda",
+    "notifications-lambda"
   ],
   "scripts": {
     "graphql-refresh": "graphql-codegen --config graphql-refresh.yml",
