--- a/cdk/package.json
+++ b/cdk/package.json
@@ -9,19 +9,20 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
-    "aws-cdk": "^1.95.1",
+    "aws-cdk": "1.95.1",
     "ts-node": "^9.0.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.95.1",
-    "@aws-cdk/aws-appsync": "^1.95.1",
-    "@aws-cdk/aws-dynamodb": "^1.95.1",
-    "@aws-cdk/aws-iam": "^1.95.1",
-    "@aws-cdk/aws-lambda": "^1.95.1",
-    "@aws-cdk/aws-s3": "^1.95.1",
-    "@aws-cdk/aws-ec2": "^1.95.1",
-    "@aws-cdk/aws-events": "^1.95.1",
-    "@aws-cdk/aws-events-targets": "^1.95.1",
-    "@aws-cdk/core": "^1.95.1"
+    "@aws-cdk/aws-apigateway": "1.95.1",
+    "@aws-cdk/aws-appsync": "1.95.1",
+    "@aws-cdk/aws-dynamodb": "1.95.1",
+    "@aws-cdk/aws-iam": "1.95.1",
+    "@aws-cdk/aws-lambda": "1.95.1",
+    "@aws-cdk/aws-s3": "1.95.1",
+    "@aws-cdk/aws-ec2": "1.95.1",
+    "@aws-cdk/aws-events": "1.95.1",
+    "@aws-cdk/aws-events-targets": "1.95.1",
+    "@aws-cdk/aws-lambda-event-sources": "1.95.1",
+    "@aws-cdk/core": "1.95.1"
   }
 }
