disable CDKMetadata from appearing in CFN
CDKMetadata is normally added by default and causes unnecessary executions of CloudFormation deployment step in the riff-raff deploy, even though no real (infrastructure) changes have happened in the cloudformation

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "license": "MIT",
   "scripts": {
-    "synth": "cdk synth --app 'npx ts-node cdk.ts' > cloudformation.yaml"
+    "synth": "cdk synth --path-metadata false --version-reporting false --app 'npx ts-node cdk.ts' > cloudformation.yaml"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
