--- a/notifications-lambda/package.json
+++ b/notifications-lambda/package.json
@@ -4,9 +4,16 @@
   "description": "Lambda to receive DynamoDB Stream events from Item table and send desktop notifications to users",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
-    "build": "ncc build src/index.ts -o dist -m -e aws-sdk"
+    "build": "ncc build src/index.ts -o dist -m -e aws-sdk",
+    "watch": "ts-node-dev --respawn run.ts"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.25.1"
+    "@types/web-push": "^3.3.2",
+    "@vercel/ncc": "^0.25.1",
+    "ts-node-dev": "^1.1.8",
+    "aws-sdk": "^2.840.0"
+  },
+  "dependencies": {
+    "web-push": "^3.4.5"
   }
 }
