--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@apollo/client": "^3.2.7",
     "@emotion/react": "^11.1.4",
     "@guardian/src-foundations": "^3.3.0",
-    "@webscopeio/react-textarea-autocomplete": "^4.7.3",
+    "@webscopeio/react-textarea-autocomplete": "https://github.com/twrichards/react-textarea-autocomplete/releases/download/v4.7.3_PLUS_shadow_DOM/package.tar.gz",
     "apollo-link": "^1.2.14",
     "aws-appsync-auth-link": "^3.0.2",
     "aws-appsync-subscription-link": "^3.0.3",
