Create lambda to verify panda cookies for appsync
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client",
     "workflow-bridge-lambda",
     "users-refresher-lambda",
-    "notifications-lambda"
+    "notifications-lambda",
+    "auth-lambda"
   ],
   "scripts": {
     "graphql-refresh": "graphql-codegen --config graphql-refresh.yml",
