--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -17,6 +17,8 @@ deployments:
       - pinboard-cloudformation
       - pinboard-workflow-bridge-lambda
       - pinboard-users-refresher-lambda
+      - pinboard-notifications-lambda
+      - pinboard-auth-lambda
     type: aws-lambda
     parameters:
       prefixStack: false
@@ -53,3 +55,13 @@ deployments:
       bucket: workflow-dist
       fileName: pinboard-notifications-lambda.zip
       functionNames: [pinboard-notifications-lambda-]
+
+  pinboard-auth-lambda:
+    dependencies:
+      - pinboard-cloudformation
+    type: aws-lambda
+    parameters:
+      prefixStack: false
+      bucket: workflow-dist
+      fileName: pinboard-auth-lambda.zip
+      functionNames: [pinboard-auth-lambda-]
