--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "outDir": "tsc-dist",
-    "types": ["@emotion/react/types/css-prop", "@types/jest"]
+    "types": ["@emotion/react/types/css-prop", "@types/jest"],
+    "lib": ["esnext", "dom"]
   }
 }
