--- a/auth-lambda/package.json
+++ b/auth-lambda/package.json
@@ -4,10 +4,9 @@
   "description": "Lambda to verify panda cookie contents, for AppSync authentication",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
-    "build": "ncc build src/index.ts -o dist -m -e aws-sdk"
-  },
-  "devDependencies": {
-    "@vercel/ncc": "^0.25.1"
+    "type-check": "tsc --noEmit",
+    "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js --external:aws-sdk --platform=node",
+    "build": "run-p --print-label type-check bundle"
   },
   "dependencies": {
     "jose": "^4.3.7"
