--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@guardian/node-riffraff-artifact": "0.3.2",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "esbuild": "^0.14.18",
     "eslint": "^7.16.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.21.5",
