--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -2,17 +2,17 @@
   "name": "bootstrapping-lambda",
   "version": "1.0.0",
   "description": "Lambda to serve JS containing config/secrets to pass on to main client-side PinBoard lib.",
-  "main": "index.js",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "license": "MIT",
   "scripts": {
+    "type-check": "tsc --noEmit",
+    "bundle": "esbuild src/server.ts --bundle --minify --outfile=dist/index.js --external:aws-sdk --platform=node",
     "watch": "ts-node-dev --respawn local/index.ts",
-    "build": "ncc build src/server.ts -o dist -m -e aws-sdk"
+    "build": "run-p --print-label type-check bundle"
   },
   "devDependencies": {
     "@types/aws-serverless-express": "^3.3.3",
     "@types/express": "^4.17.8",
-    "@vercel/ncc": "^0.25.1",
     "aws-sdk": "^2.840.0",
     "ts-node-dev": "^1.0.0"
   },
