--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "watch-main-client": "tsc --noEmit --watch & parcel watch parcel-entry.html --global PinBoard 2>&1 | grep --line-buffered -v 'Could not load source file'",
     "build-main-client": "tsc --noEmit && parcel build parcel-entry.html --global PinBoard",
     "watch-service-worker": "tsc --noEmit --watch & parcel watch src/push-notifications/index.html --out-dir dist/push-notifications --public-url '.'",
-    "build-service-worker": "tsc --noEmit & parcel build src/push-notifications/index.html --out-dir dist/push-notifications --public-url '.'",
+    "build-service-worker": "tsc --noEmit && parcel build src/push-notifications/index.html --out-dir dist/push-notifications --public-url '.'",
     "watch": "run-p --print-label watch-main-client watch-service-worker",
     "build": "run-p --print-label build-main-client build-service-worker"
   },
