--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "2.2.1",
     "typescript": "^4.0.5",
     "wsrun": "^5.2.4",
+    "yarn-deduplicate": "^3.1.0",
     "yarn-run-all": "^3.1.1"
   },
   "husky": {
