--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,39 @@ jobs:
         with:
           cache: "yarn"
 
-      - name: Run script/ci
+      - name: install dependencies
+        run: yarn install
+
+      - name: check for duplicate dependencies (if it fails here, then run `yarn yarn-deduplicate` then a `yarn install` then commit)
+        run: yarn yarn-deduplicate --fail
+
+      - name: generate TS definitions for GraphQL schema
+        run: yarn graphql-refresh
+
+      - name: perform a prettier check
+        run: yarn prettier-check
+
+      - name: perform a linting check
+        run: yarn lint
+
+      - name: write the current GIT hash to GIT_COMMIT_HASH.ts (so it's available at build time - so it gets baked into the artifact)
+        run: |
+          GIT_COMMIT_HASH=$(git rev-parse HEAD)
+          echo 'export const GIT_COMMIT_HASH = "'$GIT_COMMIT_HASH'";' > GIT_COMMIT_HASH.ts
+
+      - name: build all workspaces (i.e. modules)
+        run: yarn build
+
+      - name: combine client and bootstrapping-lambda into directory
+        run: |
+          mkdir -p dist/client
+          cp -v bootstrapping-lambda/dist/index.js dist/
+          cp -v client/dist/pinboard.main* dist/client
+          cp -rv client/dist/push-notifications dist/client
+          rm dist/client/push-notifications/report.html
+
+      - name: upload riff-raff artifacts
         run: |
           LAST_TEAMCITY_BUILD=650
           export GITHUB_RUN_NUMBER=$(( $GITHUB_RUN_NUMBER + $LAST_TEAMCITY_BUILD ))
-          ./scripts/ci.sh
+          yarn node-riffraff-artifact
