WIP move to webpack (from Parcel v1)
Co-Authored-By: Andrew Nowak <andrew.nowak@guardian.co.uk>

--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,11 @@
   "version": "1.0.0",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
-    "watch-main-client": "tsc --noEmit --watch & parcel watch parcel-entry.html --global PinBoard 2>&1 | grep --line-buffered -v 'Could not load source file'",
-    "build-main-client": "tsc --noEmit && parcel build parcel-entry.html --global PinBoard",
-    "watch-service-worker": "tsc --noEmit --watch & parcel watch src/push-notifications/index.html --out-dir dist/push-notifications --public-url '.'",
-    "build-service-worker": "tsc --noEmit && parcel build src/push-notifications/index.html --out-dir dist/push-notifications --public-url '.'",
-    "watch": "run-p --print-label watch-main-client watch-service-worker",
-    "build": "run-p --print-label build-main-client build-service-worker"
-  },
-  "alias": {
-    "react": "preact/compat",
-    "react-dom": "preact/compat"
+    "type-check": "tsc --noEmit",
+    "build-main-client": "webpack",
+    "build-service-worker": "webpack --config webpack.service-worker.config.js",
+    "watch": "run-p --print-label 'type-check --watch' 'build-main-client --watch' 'build-service-worker --watch'",
+    "build": "run-p --print-label type-check build-main-client build-service-worker"
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
@@ -27,15 +22,16 @@
     "react-shadow": "^19.0.2"
   },
   "devDependencies": {
-    "@svgr/parcel-plugin-svgr": "^5.5.0",
+    "@svgr/webpack": "^6.2.1",
     "@types/jest": "^26.0.22",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-bundle-visualiser": "^1.2.0",
-    "ts-jest": "^26.5.4"
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.69.0",
+    "webpack-cli": "^4.9.2"
   }
 }
