--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "ts-jest": "^26.5.4",
