--- a/client/package.json
+++ b/client/package.json
@@ -22,16 +22,20 @@
     "react-shadow": "^19.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.4",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@svgr/webpack": "^6.2.1",
     "@types/jest": "^26.0.22",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
+    "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "ts-jest": "^26.5.4",
-    "ts-loader": "^9.2.6",
     "webpack": "^5.69.0",
     "webpack-cli": "^4.9.2"
   }
