--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,8 @@
   "devDependencies": {
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@svgr/webpack": "^6.2.1",
     "@types/jest": "^26.0.22",
     "@types/react": "^16.9.56",
