add `webpack-bundle-analyzer` and configure it to run on pre-commit hook when yarn.lock has changed
... to encourage mindfulness about bundle size

Co-Authored-By: Andrew Nowak <andrew.nowak@guardian.co.uk>

--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,15 @@
     "type-check": "tsc --noEmit",
     "build-main-client": "webpack",
     "build-service-worker": "webpack --config webpack.service-worker.config.js",
+    "analyze-main-client-bundle": "webpack --config webpack-bundle-analyzer.config.js",
+    "analyze-main-client-bundle-if-changed": "((git diff --name-only --cached | grep 'yarn.lock') && yarn analyze-main-client-bundle) || true",
     "watch": "run-p --print-label 'type-check --watch' 'build-main-client -- --watch --mode=development' 'build-service-worker -- --watch --mode=development'",
     "build": "run-p --print-label type-check build-main-client build-service-worker"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn analyze-main-client-bundle-if-changed"
+    }
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
@@ -37,6 +44,8 @@
     "jest-environment-node": "^26.6.2",
     "ts-jest": "^26.5.4",
     "webpack": "^5.69.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   }
 }
