--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: install dependencies
         run: yarn install
 
-      - name: check for duplicate dependencies (if it fails here, then run `yarn yarn-deduplicate` then a `yarn install` then commit)
+      - name: check for duplicate dependencies (if it fails here, then pre-commit hook is not working)
         run: yarn yarn-deduplicate --fail
 
       - name: generate TS definitions for GraphQL schema
