Implement HMR; split entrypoint and root component
Co-Authored-By: Andrew Nowak <andrew.nowak@guardian.co.uk>

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "jsx": "react",
     "outDir": "tsc-dist",
-    "types": ["@emotion/react/types/css-prop", "@types/jest"],
+    "types": [
+      "@emotion/react/types/css-prop",
+      "@types/jest",
+      "@types/webpack-env"
+    ],
     "lib": ["esnext", "dom"]
   }
 }
