--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,13 @@
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "build-main-client": "webpack",
-    "build-service-worker": "webpack --config webpack.service-worker.config.js",
+    "watch-type-check": "yarn type-check --watch",
+    "build-main-client": "webpack --mode=production",
+    "watch-main-client": "webpack serve --mode=development",
     "analyze-main-client-bundle": "webpack --config webpack-bundle-analyzer.config.js",
-    "watch": "run-p --print-label 'type-check --watch' 'build-main-client -- --watch --mode=development' 'build-service-worker -- --watch --mode=development'",
+    "build-service-worker": "webpack --config webpack.service-worker.config.js --mode=production",
+    "watch-service-worker": "webpack --config webpack.service-worker.config.js --mode=development --watch",
+    "watch": "run-p --print-label watch-type-check watch-main-client watch-service-worker",
     "build": "run-p --print-label type-check build-main-client build-service-worker"
   },
   "husky": {
@@ -32,10 +35,12 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@prefresh/webpack": "^3.3.3",
     "@svgr/webpack": "^6.2.1",
     "@types/jest": "^26.0.22",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/webpack-env": "^1.16.3",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
@@ -45,6 +50,7 @@
     "webpack": "^5.69.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   }
 }
