upgrade 'source' (design systems) to v4 (and included `@guardian/source-react-components` & `@guardian/source-react-components-development-kitchen` ready for implementing designs) also had to fix-up the fontNormaliser.ts (introduced in https://github.com/guardian/editorial-tools-pinboard/pull/42) and associated lint rule, due changes in ``@guardian/source-foundations`
Co-Authored-By: Andrew Nowak <andrew.nowak@guardian.co.uk>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,14 +21,13 @@
     "@typescript-eslint/ban-ts-comment": "warn",
     "react/prop-types": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "node/no-restricted-import": [
+    "no-restricted-imports": [
       "error",
-      [
-        {
-          "name": "@guardian/src-foundations/typography",
-          "message": "Please use the modified fonts from fontNormaliser.ts"
-        }
-      ]
+      {
+        "name": "@guardian/source-foundations",
+        "importNames": ["textSans", "headline", "titlepiece", "body"],
+        "message": "Please use the modified fonts from fontNormaliser.ts"
+      }
     ]
   },
   "settings": {
