add server-side search for pinboards (i.e. workflow stubs)

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@guardian/source-react-components-development-kitchen": "^0.0.33",
     "@sentry/react": "^6.18.1",
     "@webscopeio/react-textarea-autocomplete": "4.9.1",
+    "apollo-link-debounce": "^3.0.0",
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-subscription-link": "^3.0.9",
     "date-fns": "^2.19.0",
