--- a/cdk/package.json
+++ b/cdk/package.json
@@ -26,6 +26,7 @@
     "@aws-cdk/aws-lambda": "1.147.0",
     "@aws-cdk/aws-lambda-event-sources": "1.147.0",
     "@aws-cdk/aws-s3": "1.147.0",
+    "@aws-cdk/aws-s3-notifications": "1.147.0",
     "@aws-cdk/aws-ssm": "1.147.0",
     "@aws-cdk/core": "1.147.0"
   }
