--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "watch-client": "yarn --cwd 'client' watch 2>&1",
     "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch 2>&1",
     "watch": "run-p --print-label watch-client watch-bootstrapping-lambda",
-    "test": "yarn workspace client test",
+    "test": "wsrun --parallel --fast-exit --prefix --report --exclude-missing test ",
     "build": "wsrun --parallel --fast-exit --prefix --report build ",
     "prepare": "husky install"
   },
@@ -31,6 +31,7 @@
     "@graphql-codegen/typescript-resolvers": "1.17.11",
     "@guardian/node-riffraff-artifact": "0.3.2",
     "@types/aws-lambda": "^8.10.93",
+    "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "esbuild": "^0.14.18",
@@ -38,8 +39,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^7.0.0",
+    "jest": "^26.6.3",
     "lint-staged": ">=10",
     "prettier": "2.2.1",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.0.5",
     "wsrun": "^5.2.4",
     "yarn-deduplicate": "^3.1.0",
