--- a/grid-bridge-lambda/tsconfig.json
+++ b/grid-bridge-lambda/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "tsc-dist",
+    "types": [
+      "@types/jest",
+    ],
+    "lib": ["esnext"]
+  }
 }
