add riff-raff allowedStages to limit to CODE and PROD

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -2,6 +2,9 @@ regions:
   - eu-west-1
 stacks:
   - workflow
+allowedStages:
+  - CODE
+  - PROD
 deployments:
   pinboard-cloudformation:
     type: cloud-formation
