--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "yarn-deduplicate": "^3.1.0",
     "yarn-run-all": "^3.1.1"
   },
+  "dependencies": {
+    "postgres": "^3.2.4"
+  },
   "lint-staged": {
     "**/*.{ts, tsx}": "eslint --fix",
     "**/*": "prettier --write --ignore-unknown"
