--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   "rules": {
     "@typescript-eslint/switch-exhaustiveness-check": "error",
     "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "react/prop-types": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-restricted-imports": [
