orchestrate all the database setup scripts (SQL files) via a new `runDatabaseSetup.ts` file in shared/database/local and move `runDatabaseMigration.ts` to the same placce - with top-level package.json scripts `database-setup` and `database-migrate` respectively
...much cleaner and allows us to use TS variables/constants in the SQL (which we'll need when we add the sql for creating a 'trigger' to invoke the `notifications-lambda`)

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "watch": "run-p --print-label watch-client watch-bootstrapping-lambda",
     "test": "wsrun --parallel --fast-exit --prefix --report --exclude-missing test ",
     "build": "wsrun --parallel --fast-exit --prefix --report build ",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "database-setup": "ts-node-dev shared/database/local/runDatabaseSetup.ts",
+    "database-migrate": "ts-node-dev shared/database/local/runDatabaseMigration.ts"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.2",
