--- a/client/package.json
+++ b/client/package.json
@@ -12,24 +12,36 @@
     "watch-service-worker": "webpack --config webpack.service-worker.config.js --mode=development --watch",
     "watch": "run-p --print-label watch-type-check watch-main-client watch-service-worker",
     "build": "run-p --print-label type-check build-main-client build-service-worker",
-    "test": "jest 2>&1"
+    "test": "jest 2>&1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@apollo/client": "^3.6.5",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@emotion/react": "^11.1.4",
     "@guardian/source-foundations": "^4.1.0",
     "@guardian/source-react-components": "^4.4.0",
     "@guardian/user-telemetry-client": "^1.1.0",
     "@sentry/react": "^6.18.1",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
     "@webscopeio/react-textarea-autocomplete": "4.9.2",
     "apollo-link-debounce": "^3.0.0",
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-subscription-link": "^3.0.9",
+    "babel-preset-react": "^6.24.1",
     "date-fns": "^2.19.0",
     "graphql": "^15.4.0",
+    "install": "^0.13.0",
+    "npm": "^9.1.1",
     "preact": "^10.5.13",
     "react-draggable": "^4.4.5",
-    "react-shadow": "^19.0.2"
+    "react-shadow": "^19.0.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.4",
@@ -37,18 +49,25 @@
     "@babel/preset-typescript": "^7.16.7",
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@prefresh/webpack": "^3.3.3",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/preact": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.2.1",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/webpack-env": "^1.16.3",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "babel-loader": "^8.2.3",
+    "core-js": "^3.26.1",
     "html-webpack-plugin": "^5.5.0",
     "jest-environment-node": "^26.6.2",
+    "typescript": "^4.8.4",
     "webpack": "^5.69.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
-  }
+  },
+  "LICENSE": "UNLICENSED"
 }
