'ASCII fold' the `searchText` when searching workflow, such that we match diacritics

--- a/workflow-bridge-lambda/package.json
+++ b/workflow-bridge-lambda/package.json
@@ -9,9 +9,11 @@
     "build": "run-p --print-label type-check bundle"
   },
   "devDependencies": {
+    "@types/fold-to-ascii": "^5.0.0",
     "@types/node-fetch": "^3.0.3"
   },
   "dependencies": {
+    "fold-to-ascii": "^5.0.1",
     "node-fetch": "^3.2.0"
   }
 }
