WIP set up query and search endpoints

--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@guardian/pan-domain-node": "^0.4.2",
+    "@types/cors": "^2.8.12",
     "aws-serverless-express": "^3.4.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jose": "^4.3.7"
   }
