WIP - making authenticated request - query format incorrect
Co-authored-by: Ara Cho <47318984+aracho1@users.noreply.github.com>
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>
Co-authored-by: Phill Barron <phillip.barron@guardian.co.uk>

--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -21,7 +21,7 @@
     "@guardian/pan-domain-node": "^0.4.2",
     "@types/cors": "^2.8.12",
     "aws-serverless-express": "^3.4.0",
-    "axios": "^1.2.0",
+    "axios": "1.1.x",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jose": "^4.3.7",
