add `@guardian/cdk` and refactor to use `GuStack`

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -13,7 +13,9 @@ deployments:
       cloudFormationStackByTags: false
       prependStackToCloudFormationStackName: false
       cloudFormationStackName: pinboard
-      templatePath: PinBoardStack.template.json
+      templateStagePaths:
+        CODE: PinBoardStack-CODE.template.json
+        PROD: PinBoardStack-PROD.template.json
       amiTags:
         Recipe: editorial-tools-focal-java8-ARM-WITH-cdk-base
         AmigoStage: PROD
