--- a/cdk/package.json
+++ b/cdk/package.json
@@ -18,7 +18,8 @@
     "ts-node": "9.0.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-appsync-alpha": "2.38.1-alpha.0",
+    "@aws-cdk/aws-appsync-alpha": "2.54.0-alpha.0",
+    "@guardian/cdk": "^49.2.1",
     "aws-cdk": "2.64.0",
     "aws-cdk-lib": "2.64.0",
     "constructs": "10.1.249"
